<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo" />
    <TextView
        android:layout_marginTop="28dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_topbar"
        android:layout_gravity="center"
        android:text="云播"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/host_ip"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <AutoCompleteTextView
                android:id="@+id/login_ip_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:digits="0123456789."
                android:hint="@string/input_host_ip"
                android:lines="1"
                android:maxLength="20"
                android:text="172.16.13.112"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <MultiAutoCompleteTextView
            android:id="@+id/matv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:completionThreshold="1"
            android:dropDownHorizontalOffset="5dp"
            android:text="" />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:id="@+id/login_username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/input_username"
                android:lines="1"
                android:maxLength="20"
                android:text="admin"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/userpsw"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:id="@+id/login_userpsw_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/input_userpsw"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="6"
                android:text="12345"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="32dp" />
        <Button
            android:id="@+id/login_up_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loginout"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />
        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btn_login_cloud"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loginout"
            android:text="云登录"
            android:visibility="gone"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/forget_psw_tv"
            android:layout_width="65dp"
            android:layout_height="18dp"
            android:layout_gravity="right"
            android:layout_marginTop="18dp"
            android:text="@string/forget_psw"
            android:textSize="@dimen/textsize_little" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="V1.3.6" />
    <TextView
        android:visibility="gone"
        android:text="@string/language"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>