<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorMain">
        <RelativeLayout
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/rl_back"
            android:layout_width="60dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="34dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/pending_left_weight"
                android:src="@mipmap/top_but_back_default" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="重置云账号密码"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="240dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/phone_number"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:id="@+id/et_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint=""
                android:lines="1"
                android:maxLength="20"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="40dp"
                android:text="@string/userpsw"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint=""
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="6"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/re_pass"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />

            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:id="@+id/et_re_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint=""
                android:lines="1"
                android:maxLength="20"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/phone_number"
                android:textColor="@color/grag_666"
                android:textSize="@dimen/textsize_medium" />
            <Button
                android:text="@string/get_sms_code"
                android:layout_alignParentRight="true"
                android:background="@drawable/loginout"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <com.itc.smartbroadcast.widget.custom.ClearEditText
                android:layout_toRightOf="@id/sms_code"
                android:id="@+id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_toLeftOf="@id/sms_code"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint=""
                android:lines="1"
                android:maxLength="20"
                android:textColorHint="@color/gray_C0C"
                android:textSize="@dimen/textsize_medium" />
        </RelativeLayout>
        <View
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    </LinearLayout>
    <Button
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/login_up_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/loginout"
        android:text="提交"
        android:textColor="@color/colorWhite" />
</LinearLayout>